Add distribution of power points, visualization of explosion
Deleted some warnings and some comments